# odk_servermanager_docs

./: .gitignore  Pipfile  README.rst  pyproject.toml  readthedocs.yaml  tasks.py
docs/source/: bootstrap.rst  conf.py  conf_it.py  config.rst  debug.rst  index.html  index.rst  installation.rst  installing.rst  modfix.rst  modfix_doc.rst  quick_start.rst  templates.rst  usage.rst
docs/source/locales/it/LC_MESSAGES/: bootstrap.mo  bootstrap.po  config.mo  config.po  debug.mo  debug.po  index.mo  index.po  installation.mo  installation.po  installing.po  modfix.mo  modfix.po  modfix_doc.mo  modfix_doc.po  quick_start.mo  quick_start.po  templates.mo  templates.po  usage.mo  usage.po
docs/source/locales/it_IT/LC_MESSAGES/: index.po  installing.po
tests/: test_docs.py
